// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c4:focus-within button,
.c4:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c6 {
  color: #C1C6CC;
}

.c4 .c6 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className=""
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        what?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        who?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        where?
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c4:focus-within button,
.c4:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c6 {
  color: #C1C6CC;
}

.c4 .c6 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        what?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        who?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        where?
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - labelProps & labelStyles 1`] = `
.c3 {
  list-style-type: none;
}

.c2 {
  font-size: 1.5625rem;
  font-weight: 600;
  line-height: 2.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #FFFFFF;
  color: #262D33;
}

.c1 {
  box-shadow: none;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
  margin-bottom: 0.25rem;
}

.c5 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c4 button,
.c4 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c4:focus-within button,
.c4:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c4:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c4:hover .c6 {
  color: #C1C6CC;
}

.c4 .c6 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c2"
      fontSize="xxlarge"
      fontWeight="semiBold"
      style={
        Object {
          "color": "rebeccapurple",
        }
      }
    >
      Questions
    </h2>
  </div>
  <ul
    className="c3"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        what?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        who?
      </button>
    </li>
    <li
      bg="#FFFFFF"
      className="c4"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c5"
        role="menuitem"
      >
        where?
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - menu customization 1`] = `
.c1 {
  list-style-type: none;
}

.c4 {
  color: #9785F2;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover .c5 {
  color: #C1C6CC;
}

.c6 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 {
  background-color: #4F2ABA;
  color: #BFB2FF;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  border-left-width: 10px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 10px);
}

.c2:focus-within button,
.c2:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c2:hover {
  background: #341C7A;
  color: #FFFFFF;
  font-size: #FFFFFF;
  font-weight: #FFFFFF;
}

.c2:hover .c5 {
  color: #E8E5FF;
}

.c2 .c5 {
  color: #9785F2;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #4F2ABA;
}

<li
  className="c0 "
>
  <ul
    className="c1"
    type="none"
  >
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4 c5 "
          color="#9785F2"
          size={20}
        >
          <svg
            fill="currentColor"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title>
              Logo Rings
            </title>
            <g
              clipPath="url(#LogoRings_svg__clip0)"
              fill="currentColor"
            >
              <path
                d="M13.594 11.467c-.97 0-1.881.263-2.666.72l.762 1.006a4.035 4.035 0 011.905-.477 4.067 4.067 0 014.063 4.063 4.067 4.067 0 01-4.063 4.062 4.067 4.067 0 01-4.062-4.062c0-1.103.442-2.103 1.158-2.835l-.76-1.005a5.295 5.295 0 00-1.648 3.84 5.319 5.319 0 005.312 5.312 5.319 5.319 0 005.313-5.312 5.319 5.319 0 00-5.313-5.313v.001zM10.155 9.28c0 .49-.165.943-.44 1.308l.773 1.02a3.417 3.417 0 00.266-4.334l-.916.877c.2.33.317.715.317 1.128v.001zM7.968 11.468A2.19 2.19 0 015.78 9.28a2.19 2.19 0 012.188-2.187c.337 0 .657.079.943.216l.942-.9a3.417 3.417 0 00-1.885-.566A3.442 3.442 0 004.53 9.28a3.442 3.442 0 003.438 3.438c.545 0 1.06-.132 1.52-.36l-.775-1.024a2.17 2.17 0 01-.745.134zM11.405 4.593c0-.69.561-1.25 1.25-1.25.69 0 1.25.56 1.25 1.25a1.252 1.252 0 01-1.6 1.199l-.965.923c.383.238.833.378 1.315.378 1.379 0 2.5-1.122 2.5-2.5 0-1.379-1.121-2.5-2.5-2.5a2.503 2.503 0 00-2.5 2.5c0 .443.118.859.32 1.22l.967-.925a1.236 1.236 0 01-.037-.296z"
              />
              <path
                d="M10.487 11.609a3.453 3.453 0 01-1 .749l.44.58c.302-.287.637-.54 1-.751l-.44-.58v.002zM10.754 7.275l.586-.56a2.515 2.515 0 01-.865-.903l-.623.595c.352.232.657.526.903.868z"
              />
              <path
                d="M11.688 13.194l-.762-1.006c-.363.211-.697.464-1 .752l.762 1.005a4.107 4.107 0 01.999-.75zM9.838 8.152l.916-.877a3.463 3.463 0 00-.902-.867l-.942.901a2.2 2.2 0 01.928.843zM10.489 11.608l-.773-1.02c-.253.338-.6.599-1.003.745l.775 1.024a3.461 3.461 0 001-.749zM11.342 6.716l.965-.924a1.252 1.252 0 01-.864-.903l-.966.925c.207.37.506.68.865.902z"
              />
            </g>
            <defs>
              <clipPath
                id="LogoRings_svg__clip0"
              >
                <path
                  d="M0 0h20v20H0z"
                  fill="#fff"
                  transform="translate(2 2)"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
        Looker
      </button>
    </li>
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4 c5 "
          color="#9785F2"
          size={20}
        >
          <svg
            fill="currentColor"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title>
              Validate
            </title>
            <path
              d="M11.749.09L2 4.423v6.499c0 6.01 4.16 11.633 9.749 12.998 5.589-1.365 9.749-6.986 9.749-12.998v-6.5L11.749.09zM9.582 17.42l-4.333-4.333 1.527-1.527 2.805 2.794 7.138-7.138 1.527 1.538-8.666 8.665h.002z"
              fill="currentColor"
            />
          </svg>
        </div>
        Validate
      </button>
    </li>
    <li
      bg="#4F2ABA"
      className="c2"
      color="#BFB2FF"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c3"
        role="menuitem"
      >
        <div
          className="c4 c5 "
          color="#9785F2"
          size={20}
        >
          <svg
            fill="currentColor"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title>
              Chart Pie
            </title>
            <path
              d="M11 2v20c-5.07-.5-9-4.79-9-10s3.93-9.5 9-10zm2.03 0v8.99H22c-.47-4.74-4.24-8.52-8.97-8.99zm0 11.01V22c4.74-.47 8.5-4.25 8.97-8.99h-8.97z"
              fill="currentColor"
            />
          </svg>
        </div>
        Pizza!
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - menu customization 2`] = `undefined`;

exports[`MenuGroup 1`] = `
.c1 {
  list-style-type: none;
}

.c3 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c2 button,
.c2 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c2:focus-within button,
.c2:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c2:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c2:hover .c4 {
  color: #C1C6CC;
}

.c2 .c4 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

<li
  className="c0 "
>
  <ul
    className="c1"
    type="none"
  >
    <li
      bg="#FFFFFF"
      className="c2"
      color="#4C535B"
      fontSize="small"
      fontWeight="normal"
    >
      <button
        className="c3"
        role="menuitem"
      >
        who!
      </button>
    </li>
  </ul>
</li>
`;
